--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angularjs-react",
-  "version": "1.0.0",
+  "version": "1.0.1-ppb",
   "description": "A library for using React components as AngularJS directives",
   "main": "dist/angularjs-react.js",
   "scripts": {
